# pepsi

project/pepsi/: CMakeLists.txt  README.md
project/pepsi/experiments/: CMakeLists.txt  compare.py  data.yaml  find-comp-optimal-hw.py  output-16.csv  output-32.csv  output-48.csv  plots.ipynb  script.cpp
project/pepsi/src/: client.cpp  client.h  main-base.cpp  main-psi-large.cpp  main-psi.cpp  main2.cpp  runtimeBFV.cpp  server.cpp  server.h  utils.cpp  utils.h
